<resources>
    <string name="app_name">Belajar Android Amikom</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment">Go to fragment</string>
    <string name="activity">Go to activity</string>
    <string name="second_activity">Selamat datang di Second Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">Anda memasuki First Fragment</string>
    <string name="lanjut">Klik untuk lanjut</string>
    <string name="second_fragment">Selamat anda telah masuk Second Fragment</string>
    <string name="splash_screen">Belajar Android Amikom</string>
    <string name="email_anda">Email anda</string>
    <string name="password_anda">Password anda</string>
    <string name="email">Email</string>
    <string name="silahkan_login">Silahkan Login</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="hello_galih">Hello Galih</string>
    <string name="name">username</string>
    <string name="title_activity_login">"Login "</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nim">NIM</string>
    <string name="jurusan">Jurusan</string>
    <string name="alamatlengkap">Alamat Lengkap</string>
    <string name="masukan">Masukan</string>
    <string name="titik_dua">:</string>
    <string name="add_user">Add User</string>
    <string name="list_user">List User</string>
    <string name="MainActivity_bilangan_genap_dan_ganjil">Bilangan Genap dan Ganjil</string>
    <string name="genap_atau_ganjil">Masukan Angka apakah bilangan genap atau ganjil</string>
    <string name="tentukan">Tentukan</string>
    <string name="masukan_angka">Masukan Angka</string>
    <string name="Output">Output</string>
    <string name="lsitview">Listview</string>


</resources>
