<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context="com.galih.amikom.praktek1.MainActivity">



    <TextView
        android:id="@+id/lblName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:singleLine="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/AddUser"
            android:layout_width="298dp"
            android:layout_height="56dp"
            android:text="@string/add_user"
            android:onClick="adduser"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="237dp" />

        <Button
            android:id="@+id/ListUser"
            android:layout_width="298dp"
            android:layout_height="56dp"
            android:text="@string/list_user"
            android:onClick="listuser"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="237dp" />


    <Button
        android:id="@+id/fragment"
        android:layout_width="298dp"
        android:layout_height="56dp"
        android:text="@string/fragment"
        android:onClick="fragment"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="237dp" />

    <Button
        android:id="@+id/intent"
        android:layout_width="298dp"
        android:layout_height="56dp"
        android:text="@string/activity"
        android:onClick="intent"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="318dp" />

        <Button
            android:id="@+id/ganapganjil"
            android:layout_width="298dp"
            android:layout_height="56dp"
            android:text="@string/MainActivity_bilangan_genap_dan_ganjil"
            android:onClick="bilangangenapdanganil"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="318dp" />


    </LinearLayout>

</LinearLayout>
